--- a/style.css
+++ b/style.css
@@ -15,7 +15,13 @@
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsla(210, 9%, 31%);
 
+  --bg-light: hsl(323, 70%, 95%);
+
   --nav-heigth: 7.2rem;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 html, body {
@@ -30,10 +36,16 @@ body {
   text-align: center;
 
   overflow: overlay;
+
+  background-color: var(--bg-light);
 }
 
 ul {
   list-style: none;
+}
+
+section {
+  padding-block: 10rem;
 }
 
 .wrapper {
@@ -42,13 +54,13 @@ ul {
   padding-inline: 2.4rem;
 }
 
-/*============ HEADER ============= */
+/*============ HOME ============= */
 
-header {
-  margin-top: calc(4.1rem + var(--nav-heigth)) ;
+#home {
+  padding-top: calc(4.1rem + var(--nav-heigth)) ;
 }
 
-header::before {
+#home::before {
   content: "";
   width: 100%;
   height: calc(108rem + var(--nav-heigth)) ;
@@ -61,13 +73,13 @@ header::before {
   z-index: -1;
 }
 
-header h4 {
+#home h4 {
   font-size: 1.4rem;
   color: var(--primary-color);
   margin-bottom: 1.6rem;
 }
 
-header h1 {
+#home h1 {
   font-size: 3.4rem;
   color: var(--headline);
   line-height: 130%;
@@ -75,7 +87,7 @@ header h1 {
   margin-bottom: 2.4rem;
 }
 
-header p {
+#home p {
   font-size: 1.8rem;
   line-height: 150%;
   font-weight: 400;
@@ -84,7 +96,7 @@ header p {
   margin-bottom: 3.2rem;
 }
 
-header button {
+#home button {
   background: var(--primary-color);
   border: none;
   border-radius: 4rem;
@@ -110,7 +122,7 @@ header button {
   margin-left: auto;
 }
 
-header img {
+#home img {
   display: block;
   width: 20rem;
   height: 35rem;
@@ -120,7 +132,7 @@ header img {
   object-position: 0 2rem;
 }
 
-.stats {
+#home .stats {
   width: 32.7rem;
   padding-block: 4rem;
   margin-inline: auto;
@@ -135,7 +147,7 @@ header img {
   gap: 6rem;
 }
 
-.stat h3 {
+#home .stat h3 {
   font-size: 4.8rem;
   color: var(--headline);
   line-height: 130%;
@@ -144,11 +156,11 @@ header img {
 
 }
 
-.stats h3 {
+#home .stats h3 {
   margin-top: 4rem;
 }
 
-.stat p {
+#home .stat p {
   margin: 0;
   color: var(--primary-color);
   font-size: 1.6rem;
@@ -177,12 +189,12 @@ nav .wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 nav.scroll {
   background-color: var(--primary-color);
   width: 100vw;
+  transition: 1s ease-in-out;
 }
 
 nav.scroll h1 {
@@ -232,6 +244,10 @@ body.menu-mobile .close-menu {
   visibility: visible;
 }
 
+.menu {
+  transform: translateY(100%);
+}
+
 body.menu-mobile .menu {
   position: fixed;
   top: 0;
@@ -242,6 +258,9 @@ body.menu-mobile .menu {
   height: 100vh;
 
   padding-top: var(--nav-heigth);
+
+  transition: transform 300ms;
+  transform: translateY(0);
 }
 
 body.menu-mobile nav {
@@ -308,9 +327,42 @@ body.menu-mobile button path {
   stroke: white;
 }
 
+ /*=========== SERVICES ============= */
+ #services header h4 {
+   font-size: 1.4rem;
+   line-height: 150%;
 
-/* 
-body.menu-mobile .logo h1 {
-  position: relative;
-  z-index: 1001;
-} */
+   letter-spacing: 0.08rem;
+
+   color: var(--primary-color);
+
+   text-transform: uppercase;
+
+   margin-bottom: 1.6rem;
+ }
+
+ #services .cards {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+ }
+
+ #services header h2 {
+  font-size: 3rem;
+  line-height: 3.9rem;
+  color: var(--headline);
+
+  margin-bottom: 6rem;
+ }
+
+ .card {
+  padding: 2.4rem;
+  text-align: left;
+  border: 1px solid var(--light-border);
+  border-radius: .6rem;
+  background-color: white;
+ }
+
+ #services .card h3 {
+  margin-block: 1.6rem;
+ }
