--- a/style.css
+++ b/style.css
@@ -513,11 +513,9 @@ footer .infos {
 /*=========== GERAL ============= */
 .wrapper {
   width: min(112rem, 100%);
+  display: grid;
 }
 /*=========== NAVIGATION ============= */
-
-/*=========== RESPONSIVE ============= */
-
 /*=========== reset ============= */
   nav#nav .wrapper * {
     margin: 0;
@@ -576,6 +574,13 @@ footer .infos {
     font-size: 1.4rem;
     line-height: 1.8rem;
     text-transform: uppercase;
+    font-weight: 700;
+  }
+
+  nav#nav .menu a.button:hover {
+    background-color: var(--primary-color);
+    border:none;
+    color: #fff;
   }
 
   nav#nav.scroll .logo h1 {
@@ -597,6 +602,7 @@ footer .infos {
     transition: opacity .4s;
   }
 
+  nav#nav .menu li a.active,
   nav#nav .menu li a:hover {
     opacity: 1;
     font-weight: 700;
@@ -621,11 +627,13 @@ footer .infos {
     background-color: #fff;
   }
 
+  nav#nav .menu li a.active::after,
   nav#nav .menu li a:hover::after {
     padding-inline: 0.8rem;
     width: 100%;
   }
 
+  nav#nav.scroll .menu li a.active,
   nav#nav.scroll .menu li a:hover {
     opacity: 1;
   }
@@ -634,10 +642,68 @@ footer .infos {
     transition: background 1s;
   }
 
+  nav#nav.scroll .menu a.button.active,
   nav#nav.scroll .menu a.button:hover {
     background-color: var(--primary-color);
     filter: brightness(1.3);
     border: none;
   }
+
+/*=========== HOME ============= */
+
+  #home {
+    padding-top: var(--nav-heigth);
+  }
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas: 
+    'A B'
+    'C C';
+  }
+
+  #home .col-a {
+    grid-area: A;
+    text-align: left;
+    align-self: center;
+  }
+
+  
+  #home .col-B {
+    grid-area: B;
+  }
+
+  #home h1 {
+    font-size: 4.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+    flex-direction: row;
+
+    padding: 4rem;
+    gap: 0;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home img {
+    width: 30rem;
+    height: 45rem;
+  }
+
 
 }
