--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ body.menu-mobile button path {
 #home::before {
   content: "";
   width: 100%;
-  height: calc(70% + var(--nav-heigth));
+  height: calc(76% + var(--nav-heigth));
   background-color: var(--secondary-color);
   display: block;
 
@@ -520,9 +520,22 @@ section {
   padding-block: 16rem;
 }
 
+section header h2 {
+  font-size: 4rem;
+  line-height: 5.2rem;
+}
+
 .wrapper {
   width: min(112rem, 100%);
   display: grid;
+}
+
+.col-a {
+  grid-area: A;
+}
+
+.col-b {
+  grid-area: B;
 }
 /*=========== NAVIGATION ============= */
 /*=========== reset ============= */
@@ -675,14 +688,8 @@ section {
   }
 
   #home .col-a {
-    grid-area: A;
     text-align: left;
     align-self: center;
-  }
-
-  
-  #home .col-B {
-    grid-area: B;
   }
 
   #home h1 {
@@ -718,5 +725,74 @@ section {
     height: 45rem;
   }
 
+  /*=========== SERVICES ============= */
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /*=========== ABOUT ============= */
+  #about .wrapper {
+    grid-template-columns: 38rem 1fr;
+    grid-template-areas: 'B A';
+    gap: 6rem;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  /*=========== CONTACT ============= */
+  #contact .wrapper {
+    grid-template-columns: 1fr 33.5rem;
+    grid-template-areas: 'A B';
+  }
+
+  #contact .col-a {
+    align-self: center;
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+
+  /*=========== FOOTER ============= */
+
+  footer  {
+    padding: 2rem 0
+  }
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'A B';
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+  footer .col-b {
+    align-self: center;
+    justify-self: flex-end;
+  }
+
+  footer .wrapper .logo img {
+    width: 20rem;
+    height: 20rem;
+  }
 
 }
