Add: border-radius contact section

--- a/style.css
+++ b/style.css
@@ -550,6 +550,10 @@ body.menu-mobile button path {
   color: var(--paragraph);
 }
 
+#contact .wrapper img {
+  border-radius: 2rem;
+}
+
 /*=========== FOOTER ============= */
 footer {
   background-color: var(--primary-color);
