--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ nav {
   z-index: 100;
 }
 
-nav h1 {
+nav .logo h2 {
   color: var(--primary-color);
   font-family: 'Corinthia', cursive;
   font-size: 3.6rem;
@@ -154,7 +154,7 @@ nav.scroll {
   transition: 1s ease-in-out;
 }
 
-nav.scroll h1 {
+nav.scroll h2 {
   color: white;
   font-family: 'Corinthia', cursive;
   font-size: 3.6rem;
@@ -163,10 +163,6 @@ nav.scroll h1 {
 .logo {
   text-decoration: none;
 }
-
-/* nav.scroll img {
-  background-image: url('./logo-blumis-white.svg');
-} */
 
 nav.scroll button path {
   stroke: white;
@@ -444,6 +440,8 @@ body.menu-mobile button path {
 
 #about img {
   border-radius: 2rem;
+  width: 40rem;
+  height: 54rem;
 }
 
 /*=========== TESTIMONIALS ============= */
@@ -555,8 +553,16 @@ body.menu-mobile button path {
   color: var(--paragraph);
 }
 
+/* #contact .col-b {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
 #contact .wrapper img {
   border-radius: 2rem;
+  width: 30rem;
+  height: 40rem;
 }
 
 /*=========== FOOTER ============= */
@@ -676,7 +682,7 @@ footer .infos {
     width: 66%;
   }
 
-  nav#nav .logo h1 {
+  nav#nav .logo h2 {
     color: var(--primary-color);
     font-size: 4.2rem;
   }
@@ -713,7 +719,7 @@ footer .infos {
     color: #fff;
   }
 
-  nav#nav.scroll .logo h1 {
+  nav#nav.scroll .logo h2 {
     color: #fff;
     font-size: 4.2rem;
   }
