--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
   --nav-heigth: 7.2rem;
 }
 
+@font-face {
+  font-family: "Roboto";
+  src: url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -523,6 +528,9 @@ body.menu-mobile button path {
 /*=========== CONTACT ============= */
 #contact {
   text-align: left;
+  background: url('./assets/images/contato-blumis.jpg') no-repeat;
+  background-size: cover;
+  text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.22);
 }
 
 #contact header {
@@ -553,16 +561,215 @@ body.menu-mobile button path {
   color: var(--paragraph);
 }
 
-/* #contact .col-b {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+#contact:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: rgb(25, 25, 25);
+  background: -moz-linear-gradient(90deg, rgba(25, 25, 25, 1) 0%, rgba(51, 51, 51, 0.6110819327731092) 53%, rgba(25, 25, 25, 1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(25, 25, 25, 1) 0%, rgba(51, 51, 51, 0.6110819327731092) 53%, rgba(25, 25, 25, 1) 100%);
+  background: linear-gradient(90deg, rgba(25, 25, 25, 1) 0%, rgba(51, 51, 51, 0.6110819327731092) 53%, rgba(25, 25, 25, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#191919", endColorstr="#191919", GradientType=1);
+  z-index: -1;
+}
 
-#contact .wrapper img {
-  border-radius: 2rem;
+#contact h2,
+#contact .content ul li a {
+  color: #fff;
+}
+
+#contact .box {
+  position: relative;
+  width: 38rem;
+  height: 52rem;
+  background: #1c1c1c;
+  border-radius: .8rem;
+  overflow: hidden;
+}
+
+#contact .box::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 38rem;
+  height: 52rem;
+  background: linear-gradient(0deg, transparent, var(--primary-color), var(--primary-color));
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+}
+
+#contact .box::after {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 38rem;
+  height: 52rem;
+  background: linear-gradient(0deg, transparent, var(--primary-color), var(--primary-color));
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+  animation-delay: -3s;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#contact form {
+  position: absolute;
+  inset: .2rem;
+  border-radius: .8rem;
+  background: #28292d;
+  z-index: 10;
+  padding: 5rem 4rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#contact .box header h4 {
+  padding-block: .5rem;
+  font-size: 2rem;
+}
+
+#contact .box header h4,
+#contact .box header p {
+  text-align: center;
+  letter-spacing: .2rem;
+}
+
+#contact .box header p {
+  color: #fff;
+}
+
+#contact .inputBox {
+  position: relative;
   width: 30rem;
-  height: 40rem;
+  margin-top: 2.5rem;
+}
+
+#contact input {
+  position: relative;
+  width: 100%;
+  padding: 2rem 1rem 1rem;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #23242a;
+  font-size: 1em;
+  letter-spacing: 0.05em;
+  z-index: 10;
+}
+
+#contact .inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 2rem 0 1rem;
+  font-size: 1em;
+  color: #8f8f8f;
+  pointer-events: none;
+  letter-spacing: 0.05em;
+  transition: .5s;
+}
+
+#contact .inputBox input:valid~span,
+#contact .inputBox input:focus~span {
+  color: var(--primary-color);
+  transform: translateX(0) translateY(-3.4rem);
+  font-size: 0.75em;
+}
+
+#contact .inputBox i {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: var(--primary-color);
+  border-radius: .4rem;
+  transition: .5s;
+  pointer-events: none;
+  z-index: 9;
+}
+
+#contact .inputBox input:valid~i,
+#contact .inputBox input:focus~i {
+  height: 4.4rem;
+  color: #fff;
+}
+
+#contact button[type="submit"] {
+  position: absolute;
+  right: 10%;
+  bottom: 5%;
+  border: none;
+  outline: none;
+  background: var(--primary-color);
+  padding: 1.1rem 2.5rem;
+  width: 10rem;
+  margin-top: 1rem;
+  border-radius: .4rem;
+  font-weight: 800;
+  color: #fff;
+  margin-top: 1rem;
+  transition: .5s;
+}
+
+#contact button[type="submit"]:active {
+  opacity: 0.8;
+}
+
+#contact button:hover {
+  opacity: 0.8;
+}
+
+/*=========== TRANK YOU PAGE ============= */
+.popup {
+  width: 40rem;
+  background: #fff;
+  border-radius: .6rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 0 3rem 3rem;
+  color: #333;
+}
+
+.popup img {
+  width: 10rem;
+  margin-top: -5rem;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.popup h1 {
+  font-family: Corinthia, sans-serif;
+  color: var(--primary-color);
+  font-weight: 900;
+  font-size: 3.8rem;
+  margin: 3rem 0 1rem;
+}
+
+.popup p {
+  color: var(--paragraph);
+}
+
+.popup .button {
+  margin: 0 auto;
+  width: 100%;
+  margin-top: 1.8rem;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 /*=========== FOOTER ============= */
