--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 :root {
   font-size: 62.5%;
+  --confirm-color: #2ecc71;
   --primary-color: hsl(328, 82%, 38%);
   --secondary-color: hsl(333, 49%, 82%);
   --light-color: hsl(3, 68%, 94%);
@@ -378,6 +379,123 @@ body.menu-mobile button path {
   height: 11rem;
 }
 
+/*=========== POPUP ============= */
+.popUp {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 10000000;
+  background: #fff;
+  max-width: 365px;
+  border-radius: 15px;
+  padding: 25px 25px 30px 25px;
+  text-align: center;
+
+  -webkit-box-shadow: -3px 5px 33px -31px rgba(0,0,0,0.51);
+  -moz-box-shadow: -3px 5px 33px -31px rgba(0,0,0,0.51);
+  box-shadow: -3px 5px 33px -31px rgba(0,0,0,0.51);
+}
+
+.popUp img {
+  max-width: 90px;
+}
+
+.popUp .content {
+  margin-top: 10px;
+}
+
+.popUp.hide {
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+  transition: all 0.3s ease;
+}
+
+.contentInfo header {
+  font-size: 25px;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.contentInfo p {
+  color: #858585;
+  margin: 18px 0 20px 0;
+  font-size: 14px;
+}
+
+.contentInfo .buttons {
+  display: flex;
+  align-items: centet;
+  justify-content: center;
+}
+
+.buttons .item {
+  margin: 0 10px;
+}
+
+.buttons button {
+  padding: 10px 20px;
+  background: var(--confirm-color);
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 1s;
+}
+
+.buttons a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--confirm-color);
+  text-decoration: none;
+  cursor: pointer;
+  transition: 1s ease-in-out;
+}
+
+.buttons button:hover {
+  background-color: #27ae60;
+}
+
+.buttons a:hover {
+  color: #27ae60;
+}
+
+.contentResult {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 10000000;
+  background: #fff;
+  max-width: 365px;
+  border-radius: 15px;
+  padding: 25px 25px 8px 25px;
+  text-align: center;
+  -webkit-box-shadow: -3px 5px 33px -31px rgba(0,0,0,0.51);
+  -moz-box-shadow: -3px 5px 33px -31px rgba(0,0,0,0.51);
+  box-shadow: -3px 5px 33px -31px rgba(0,0,0,0.51);
+}
+
+.cookieAccepted.view, .cookieRefused.view {
+  transition: all 1s ease;
+  opacity: 1;
+  visibility: visibible;
+  display: block;
+}
+
+.contentResult .cookieAccepted img, .contentResult .cookieRefused img {
+  max-width: 60px;
+}
+
+.contentResult p {
+  color: #858585;
+  margin: 18px 0 20px 0;
+  font-size: 14px;
+}
 
 
 /*=========== SERVICES ============= */
@@ -1098,7 +1216,6 @@ footer .infos {
     bottom: 16rem;
   }
 
-
   /*=========== ABOUT ============= */
   #about .wrapper {
     grid-template-columns: 38rem 1fr;
@@ -1111,7 +1228,9 @@ footer .infos {
   }
 
   #about .content p {
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
+    margin-top: 2.4rem;
+    margin-bottom: 6rem;
   }
 
   /*=========== TESTIMONIALS ============= */
